--- a/college-client/src/app/components/login-page/login-page.component.html
+++ b/college-client/src/app/components/login-page/login-page.component.html
@@ -2,8 +2,9 @@
     <form [formGroup]="form" (ngSubmit)="login()">
         <div class="login-page__form">
             <div class="login-page__form__logo">
-                <img class="login-page__form__logo-img" src="../../../assets/logo.jpg" alt="logo">
+                <img class="login-page__form__logo-img" src="../../../assets/logo.jpg" alt="logo" routerLink="/">
             </div>
+            <mat-error class="error" *ngIf="error">{{error}}</mat-error>
             <mat-form-field appearance="outline">
                 <mat-label>Логин</mat-label>
                 <input formControlName="login" matInput type="text" [errorStateMatcher]="matcher">
@@ -18,6 +19,7 @@
                 <mat-error *ngIf="form.get('password').hasError('required')">Обязательное поле</mat-error>
             </mat-form-field>
             <button type="submit" mat-raised-button class="login-page__form__btn" color="primary">ВОЙТИ</button>
+            <app-loading *ngIf="loading"></app-loading>
         </div>
     </form>
 </div>
