--- a/college-client/src/styles.scss
+++ b/college-client/src/styles.scss
@@ -1,3 +1,4 @@
+@import 'src/app/styles/variables';
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
@@ -28,10 +29,26 @@ $college-client-theme: mat-light-theme($college-client-primary, $college-client-
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; width: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; display: flex; overflow: hidden;}
+* {
+  outline: none;
+  margin: 0;
+  padding: 0;
+  font-family: $font-default;
+}
+
+html, body, .host-class {
+  height: 100%;
+  width: 100%;
+}
 
 .host-class {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.error {
+  color: red;
+  text-align: center;
+  padding: 10px 0;
+  font-size: $base-font-size;
 }
