--- a/college-client/src/app/components/home-page/home-page.component.scss
+++ b/college-client/src/app/components/home-page/home-page.component.scss
@@ -3,6 +3,14 @@
 
 .home-page {
   @include page;
-  justify-content: center;
-  align-items: center;
+}
+
+@media #{$xs} {
+  .home-page {
+    background-color: white;
+    &__form {
+      box-shadow: none;
+      margin: 0;
+    }
+  }
 }
