--- a/college-client/src/app/components/login-page/login-page.component.html
+++ b/college-client/src/app/components/login-page/login-page.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="form" (ngSubmit)="login()">
         <div class="login-page__form">
             <div class="login-page__form__logo">
-                <img class="login-page__form__logo-img" src="../../../assets/logo.jpg" alt="logo" routerLink="/">
+                <img class="login-page__form__logo-img" src="../../../assets/logo.png" alt="logo" routerLink="/">
             </div>
             <mat-error class="error" *ngIf="error">{{error}}</mat-error>
             <mat-form-field appearance="outline">
