--- a/college-client/src/app/components/shared/header/header.component.html
+++ b/college-client/src/app/components/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
     <div class="header__logo">
-        <img class="header__logo-img" src="../../../../assets/logo.jpg" alt="logo">
+        <img class="header__logo-img" src="../../../../assets/logo.png" alt="logo">
     </div>
 </div>
