--- a/college-client/src/app/styles/mixins.scss
+++ b/college-client/src/app/styles/mixins.scss
@@ -2,6 +2,46 @@
 
 @mixin page() {
   display: flex;
-  flex-grow: 1;
   background-color: $background-color-gray;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  @media #{$xs} {
+    background-color: white;
+  }
+  &__form {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    width: 290px;
+    margin: 30px;
+    padding: 30px;
+    box-shadow: $shadow;
+    border-radius: 15px;
+    @media #{$xs} {
+      margin: 0;
+      box-shadow: none;
+      padding: 15px;
+    }
+    &__title {
+      text-align: center;
+      padding-bottom: 20px;
+    }
+    &__logo {
+      display: flex;
+      justify-content: center;
+      padding: 20px 0;
+      &-img {
+        width: 110px;
+        cursor: pointer;
+      }
+    }
+    &__btn {
+      padding: 10px;
+      letter-spacing: 1px;
+      font-size: 15px;
+      margin-top: 5px;
+    }
+  }
 }
