--- a/college-client/src/styles.scss
+++ b/college-client/src/styles.scss
@@ -41,6 +41,10 @@ html, body, .host-class {
   width: 100%;
 }
 
+h2 {
+  font-size: 20px;
+}
+
 .host-class {
   display: flex;
   flex-direction: column;
