add offer-request & offer-list

--- a/college-client/src/app/components/home-page/home-page.component.scss
+++ b/college-client/src/app/components/home-page/home-page.component.scss
@@ -3,6 +3,13 @@
 
 .home-page {
   @include page;
+
+  &__form {
+    &__arrows {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 }
 
 @media #{$xs} {
