--- a/college-client/src/app/styles/variables.scss
+++ b/college-client/src/app/styles/variables.scss
@@ -3,6 +3,7 @@ $background-color-gray: #f9f9f9;
 
 $font-default: 'Roboto', 'Helvetica Neue', sans-serif;
 $base-font-size: 14px;
+$small-font-size: 12px;
 $base-line-height: 18px;
 
 $shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
