--- a/college-client/src/app/components/home-page/home-page.component.html
+++ b/college-client/src/app/components/home-page/home-page.component.html
@@ -6,56 +6,100 @@
         <img class="home-page__form__logo-img" src="../../../assets/logo.png" alt="logo" routerLink="/" />
       </div>
       <div class="home-page__form__title">
-        <h2>Калькулятор ипотеки</h2>
+        <h2>Рассчитать ипотеку</h2>
       </div>
-      <mat-form-field appearance="outline">
+      <mat-form-field
+        class="home-page__form__field"
+        appearance="outline"
+        [hintLabel]="1000000 | currency: '₽ ':'symbol':'0.0-0'"
+      >
         <mat-label>Стоимость недвижемости</mat-label>
-        <input formControlName="price" matInput currencyMask [errorStateMatcher]="matcher" />
+        <input
+          class="home-page__form__field__input"
+          formControlName="price"
+          matInput
+          currencyMask
+          [errorStateMatcher]="matcher"
+        />
+        <mat-hint align="end">{{ 15000000 | currency: '₽ ':'symbol':'0.0-0' }}</mat-hint>
         <mat-error *ngIf="price.hasError('required')">Обязательное поле</mat-error>
         <mat-error *ngIf="price.hasError('min')">Мин. сумма 1 млн. руб.</mat-error>
         <mat-error *ngIf="price.hasError('max')">Макс. сумма 15 млн. руб.</mat-error>
       </mat-form-field>
-      <mat-slider
-        (input)="price.setValue($event.value)"
-        min="1000000"
-        max="15000000"
-        step="100000"
-        color="primary"
-        [value]="price.value"
-      ></mat-slider>
-      <mat-form-field appearance="outline">
+      <div class="home-page__form__field__slider-container">
+        <mat-slider
+          class="home-page__form__field__slider"
+          (input)="price.setValue($event.value)"
+          min="1000000"
+          max="15000000"
+          step="100000"
+          [color]="price.valid ? 'primary' : 'accent'"
+          [value]="price.value"
+        ></mat-slider>
+      </div>
+      <mat-form-field
+        appearance="outline"
+        class="home-page__form__field"
+        [hintLabel]="minDeposit | currency: '₽ ':'symbol':'0.0-0'"
+      >
         <mat-label>Первоначальный взнос</mat-label>
-        <input formControlName="deposit" matInput currencyMask [errorStateMatcher]="matcher" />
+        <input
+          class="home-page__form__field__input"
+          formControlName="deposit"
+          matInput
+          [errorStateMatcher]="matcher"
+          currencyMask
+        />
+        <mat-hint align="end">{{ maxDeposit | currency: '₽ ':'symbol':'0.0-0' }}</mat-hint>
         <mat-error *ngIf="deposit.hasError('required')">Обязательное поле</mat-error>
-        <mat-error *ngIf="deposit.hasError('min')">Мин. сумма не может быть меньше 15% от стоимости недвижемости</mat-error>
-        <mat-error *ngIf="deposit.hasError('max')">Макс. сумма не может быть больше 90% от стоимости недвижемости</mat-error>
+        <mat-error *ngIf="deposit.hasError('min')"
+          >Мин. сумма не может быть меньше 15% от стоимости недвижемости</mat-error
+        >
+        <mat-error *ngIf="deposit.hasError('max')"
+          >Макс. сумма не может быть больше 90% от стоимости недвижемости</mat-error
+        >
       </mat-form-field>
-      <mat-slider
-        (input)="deposit.setValue($event.value)"
-        [min]="minDeposit"
-        [max]="maxDeposit"
-        step="50000"
-        color="primary"
-        [value]="deposit.value"
-      ></mat-slider>
-
-      <!--            <mat-form-field appearance="outline">-->
-      <!--                <mat-label>Имя</mat-label>-->
-      <!--                <input formControlName="firstName" matInput type="text" [errorStateMatcher]="matcher">-->
-      <!--                <mat-error *ngIf="form.get('firstName').hasError('required')">Обязательное поле</mat-error>-->
-      <!--            </mat-form-field>-->
-      <!--            <mat-form-field appearance="outline">-->
-      <!--                <mat-label>Фамилия</mat-label>-->
-      <!--                <input formControlName="lastName" matInput type="text" [errorStateMatcher]="matcher">-->
-      <!--                <mat-error *ngIf="form.get('lastName').hasError('required')">Обязательное поле</mat-error>-->
-      <!--            </mat-form-field>-->
-      <!--            <mat-form-field appearance="outline">-->
-      <!--                <mat-label>E-mail</mat-label>-->
-      <!--                <input formControlName="email" matInput type="email" [errorStateMatcher]="matcher">-->
-      <!--                <mat-error *ngIf="form.get('email').hasError('email')">Неверный формат</mat-error>-->
-      <!--                <mat-error *ngIf="form.get('email').hasError('required')">Обязательное поле</mat-error>-->
-      <!--            </mat-form-field>-->
-      <button type="submit" mat-raised-button class="home-page__form__btn" color="primary">Получить предложения</button>
+      <div class="home-page__form__field__slider-container">
+        <mat-slider
+          class="home-page__form__field__slider"
+          (input)="deposit.setValue($event.value)"
+          [min]="minDeposit"
+          [max]="maxDeposit"
+          step="50000"
+          [color]="deposit.valid ? 'primary' : 'accent'"
+          [value]="price.valid ? deposit.value : minDeposit"
+        ></mat-slider>
+      </div>
+      <mat-form-field appearance="outline" class="home-page__form__field" hintLabel="1 год">
+        <mat-label>Срок кредита</mat-label>
+        <input
+          min="1"
+          max="30"
+          class="home-page__form__field__input"
+          formControlName="duration"
+          matInput
+          [errorStateMatcher]="matcher"
+          type="number"
+        />
+        <mat-hint align="end">30 лет</mat-hint>
+        <mat-error *ngIf="duration.hasError('required')">Обязательное поле</mat-error>
+        <mat-error *ngIf="duration.hasError('min')">Мин. срок кредита 1 год</mat-error>
+        <mat-error *ngIf="duration.hasError('max')">Макс. срок кредита 30 лет</mat-error>
+      </mat-form-field>
+      <div class="home-page__form__field__slider-container">
+        <mat-slider
+          class="home-page__form__field__slider"
+          (input)="duration.setValue($event.value)"
+          min="1"
+          max="30"
+          step="1"
+          [color]="duration.valid ? 'primary' : 'accent'"
+          [value]="duration.value"
+        ></mat-slider>
+      </div>
+      <button [disabled]="form.invalid" type="submit" mat-raised-button class="home-page__form__btn" color="primary">
+        Получить предложения
+      </button>
       <app-loading *ngIf="loading"></app-loading>
     </div>
   </form>
