--- a/college-client/src/app/components/shared/loading/loading.component.scss
+++ b/college-client/src/app/components/shared/loading/loading.component.scss
@@ -1,12 +1,9 @@
 :host {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 9999999;
-  background: rgba(0, 0, 0, 0.1);
+  z-index: 999;
+  background: rgba(0, 0, 0, 0.3);
 }
