--- a/college-client/src/app/styles/mixins.scss
+++ b/college-client/src/app/styles/mixins.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     width: 290px;
     margin: 30px;
-    padding: 30px;
+    padding: 40px 50px;
     box-shadow: $shadow;
     border-radius: 15px;
     @media #{$xs} {
@@ -26,7 +26,7 @@
     }
     &__title {
       text-align: center;
-      padding-bottom: 20px;
+      padding-bottom: 40px;
     }
     &__logo {
       display: flex;
@@ -37,8 +37,30 @@
         cursor: pointer;
       }
     }
+    &__field {
+      width: 100%;
+      margin-bottom: 30px;
+      ::ng-deep .mat-form-field-subscript-wrapper {
+        margin-top: 9px;
+      }
+      &__input {
+        text-align: right;
+      }
+      &__slider {
+        ::ng-deep, .mat-slider {
+          padding: 0;
+          height: 0;
+        }
+        width: 97%;
+        &-container {
+          display: flex;
+          justify-content: center;
+          transform: translateY(-81px);
+        }
+      }
+    }
     &__btn {
-      padding: 10px;
+      padding: 8px;
       letter-spacing: 1px;
       font-size: 15px;
       margin-top: 5px;
