--- a/college-client/src/styles.scss
+++ b/college-client/src/styles.scss
@@ -1,39 +1,12 @@
 @import 'src/app/styles/variables';
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$college-client-primary: mat-palette($mat-indigo);
-$college-client-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$college-client-warn: mat-palette($mat-red);
-
-// Create the theme object (a Sass map containing all of the palettes).
-$college-client-theme: mat-light-theme($college-client-primary, $college-client-accent, $college-client-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($college-client-theme);
-
-/* You can add global styles to this file, and also import other style files */
+@import 'src/app/styles/material-reset';
 
 * {
   outline: none;
   margin: 0;
   padding: 0;
   font-family: $font-default;
+  text-decoration: none;
 }
 
 html, body, .host-class {
@@ -42,17 +15,10 @@ html, body, .host-class {
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 23px;
 }
 
 .host-class {
   display: flex;
   flex-direction: column;
-}
-
-.error {
-  color: red;
-  text-align: center;
-  padding: 10px 0;
-  font-size: $base-font-size;
 }
