--- a/college-client/src/app/styles/mixins.scss
+++ b/college-client/src/app/styles/mixins.scss
@@ -1,47 +1,39 @@
 @import './variables';
 
-@mixin page() {
-  display: flex;
-  background-color: $background-color-gray;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  @media #{$xs} {
-    background-color: white;
-  }
-  &__form {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    justify-content: center;
-    width: 290px;
-    margin: 30px;
-    padding: 40px 50px;
-    box-shadow: $shadow;
-    border-radius: 15px;
-    @media #{$xs} {
-      margin: 0;
-      box-shadow: none;
-      padding: 15px;
+@mixin form() {
+  &-form {
+    width: 300px;
+    ::ng-deep .mat-vertical-content {
+      padding: 12px 24px;
+    }
+    ::ng-deep .mat-vertical-stepper-header {
+      padding: 12px 24px 24px 24px;
+    }
+    &__wrapper {
+      display: flex;
+      justify-content: center;
+      width: 100%;
     }
     &__title {
       text-align: center;
-      padding-bottom: 40px;
+      padding: 25px 0;
     }
-    &__logo {
-      display: flex;
-      justify-content: center;
-      padding: 20px 0;
-      &-img {
-        width: 110px;
-        cursor: pointer;
-      }
+    &__next, &__back {
+      position: absolute;
+    }
+    &__next {
+      transform: translate(10px, -5px);
+    }
+    &__back {
+      transform: translate(-67px, -6px);
     }
     &__field {
       width: 100%;
-      margin-bottom: 30px;
       ::ng-deep .mat-form-field-subscript-wrapper {
         margin-top: 9px;
+      }
+      &-number {
+        margin-bottom: 30px;
       }
       &__input {
         text-align: right;
@@ -59,11 +51,12 @@
         }
       }
     }
-    &__btn {
+    &__submit {
       padding: 8px;
       letter-spacing: 1px;
       font-size: 15px;
       margin-top: 5px;
+      width: 100%;
     }
   }
 }
