--- a/college-client/src/app/components/home-page/home-page.component.scss
+++ b/college-client/src/app/components/home-page/home-page.component.scss
@@ -2,22 +2,45 @@
 @import '../../styles/mixins';
 
 .home-page {
-  @include page;
-
-  &__form {
-    &__arrows {
-      display: flex;
-      justify-content: space-between;
+  display: flex;
+  background-color: $background-color-gray;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  @media #{$xs} {
+    background-color: white;
+  }
+  ::ng-deep .mat-tab-header {
+    display: none;
+  }
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    width: 520px;
+    padding: 40px 0;
+    box-shadow: $shadow;
+    border-radius: 15px;
+    @media #{$xs} {
+      margin: 0;
+      box-shadow: none;
+      padding: 15px;
     }
   }
-}
-
-@media #{$xs} {
-  .home-page {
-    background-color: white;
-    &__form {
-      box-shadow: none;
-      margin: 0;
+  &__logo {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+    &-img {
+      width: 110px;
+      cursor: pointer;
     }
+  }
+  &__finish {
+    padding: 30px 110px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
   }
 }
