--- a/college-client/src/app/components/home-page/offers-list/offer-list.component.html
+++ b/college-client/src/app/components/home-page/offers-list/offer-list.component.html
@@ -1,44 +1,47 @@
-<h3 mat-dialog-title class="offer__title">Выберите предложение</h3>
-<mat-dialog-content >
-  <mat-accordion>
-    <mat-expansion-panel *ngFor="let offer of offers">
-      <mat-expansion-panel-header>
-        <mat-panel-title class="offer__info_title">{{ offer.bankName }}</mat-panel-title>
-      </mat-expansion-panel-header>
-      <mat-list>
-        <mat-divider></mat-divider>
-        <mat-list-item>
-          <mat-chip-list class="offer__info">
-            <mat-hint class="offer__info_label">Процентная ставка</mat-hint>
-            <mat-chip>{{ offer.mortgageRate | percent }}</mat-chip>
-          </mat-chip-list>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item>
-          <mat-chip-list class="offer__info">
-            <mat-hint class="offer__info_label">Ежемесячный платёж</mat-hint>
-            <mat-chip>{{ offer.monthlyPayment | currency: '₽ ':'symbol':'0.0-0' }}</mat-chip>
-          </mat-chip-list>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item>
-          <mat-chip-list>
-            <mat-hint class="offer__info_label">Сумма кредита</mat-hint>
-            <mat-chip>{{ offer.credit | currency: '₽ ':'symbol':'0.0-0' }}</mat-chip>
-          </mat-chip-list>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item>
-          <mat-chip-list>
-            <mat-hint class="offer__info_label">Необходимый доход</mat-hint>
-            <mat-chip>{{ offer.neededSalary | currency: '₽ ':'symbol':'0.0-0' }}</mat-chip>
-          </mat-chip-list>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-      </mat-list>
-      <button mat-raised-button class="offer__choose" [mat-dialog-close]="offer">Выбрать</button>
-    </mat-expansion-panel>
-  </mat-accordion>
+<h3 mat-dialog-title>Выберите предложение</h3>
+<mat-dialog-content>
+  <mat-divider></mat-divider>
+  <div class="offer-list">
+    <mat-accordion>
+      <mat-expansion-panel *ngFor="let offer of offers">
+        <mat-expansion-panel-header>
+          <mat-panel-title class="offer__info_title">{{ offer.bankName }}</mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+          <mat-divider></mat-divider>
+          <mat-list-item>
+            <mat-chip-list class="offer__info">
+              <mat-hint class="offer__info_label">Процентная ставка</mat-hint>
+              <mat-chip>{{ offer.mortgageRate | percent }}</mat-chip>
+            </mat-chip-list>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item>
+            <mat-chip-list class="offer__info">
+              <mat-hint class="offer__info_label">Ежемесячный платёж</mat-hint>
+              <mat-chip>{{ offer.monthlyPayment | currency: '₽ ':'symbol':'0.0-0' }}</mat-chip>
+            </mat-chip-list>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item>
+            <mat-chip-list>
+              <mat-hint class="offer__info_label">Сумма кредита</mat-hint>
+              <mat-chip>{{ offer.credit | currency: '₽ ':'symbol':'0.0-0' }}</mat-chip>
+            </mat-chip-list>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item>
+            <mat-chip-list>
+              <mat-hint class="offer__info_label">Необходимый доход</mat-hint>
+              <mat-chip>{{ offer.neededSalary | currency: '₽ ':'symbol':'0.0-0' }}</mat-chip>
+            </mat-chip-list>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+        </mat-list>
+        <button mat-raised-button class="offer__choose" [mat-dialog-close]="offer">Выбрать</button>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
   <mat-divider></mat-divider>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
