--- a/college-client/src/app/components/home-page/home-page.component.html
+++ b/college-client/src/app/components/home-page/home-page.component.html
@@ -21,9 +21,9 @@
       </mat-tab>
       <mat-tab>
         <div class="home-page__finish">
-          Поздравляем, {{loanRequest?.firstName}}!<br><br>
+          Поздравляем, {{loanRequest?.person.firstName}}!<br><br>
           Вы успешно отправили заявку на оформление ипотеки.<br>
-          Скоро с вами свяжется сотрудник "{{offer?.bankName}}" для уточнения деталей.<br><br>
+          Скоро с вами свяжется сотрудник "{{offer?.bank.name}}" для уточнения деталей.<br><br>
           Хорошего дня!
         </div>
       </mat-tab>
