--- a/college-client/src/app/app.component.html
+++ b/college-client/src/app/app.component.html
@@ -1,3 +1,9 @@
-<!--<div class="wrapper">-->
-    <router-outlet></router-outlet>
-<!--</div>-->
+<div class="wrapper">
+    <div class="content">
+        <div class="logo">
+            <img class="logo-img" src="../assets/logo.png" alt="logo"/>
+        </div>
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
