--- a/college-client/src/app/components/login-page/login-page.component.scss
+++ b/college-client/src/app/components/login-page/login-page.component.scss
@@ -1,6 +1,12 @@
 @import '../../styles/variables';
 @import '../../styles/mixins';
 
-.login-page {
-  //@include page;
+.login {
+  @include form;
+
+  &-form__error {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+  }
 }
