--- a/college-client/src/app/components/home-page/offers-list/offer-list.component.html
+++ b/college-client/src/app/components/home-page/offers-list/offer-list.component.html
@@ -12,7 +12,7 @@
           <mat-list-item>
             <mat-chip-list class="offer__info">
               <mat-hint class="offer__info_label">Процентная ставка</mat-hint>
-              <mat-chip>{{ offer.bank.rate | percent }}</mat-chip>
+              <mat-chip>{{ offer.bank.rate / 100 | percent }}</mat-chip>
             </mat-chip-list>
           </mat-list-item>
           <mat-divider></mat-divider>
