--- a/client/src/app/components/admin-panel-page/admin-panel-page.component.html
+++ b/client/src/app/components/admin-panel-page/admin-panel-page.component.html
@@ -1,54 +1,38 @@
-<div class="admin-page">
-  <mat-tab-group>
-    <mat-tab label="Банки">
-      <table mat-table [dataSource]="banks" class="admin-page__table">
-        <ng-container matColumnDef="number">
-          <td mat-cell *matCellDef="let element"> 1 </td>
-        </ng-container>
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Название</th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-        </ng-container>
-        <ng-container matColumnDef="rate">
-          <th mat-header-cell *matHeaderCellDef>Процентная ставка</th>
-          <td mat-cell *matCellDef="let element">{{ element.rate / 100 | percent }}</td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="banksColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: banksColumns"></tr>
-      </table>
-    </mat-tab>
-    <mat-tab label="Заявители">
-      <!--            <table mat-table>-->
-      <!--                <tr mat-row>-->
-      <!--                    <td>123</td>-->
-      <!--                </tr>-->
-      <!--            </table>-->
-    </mat-tab>
-  </mat-tab-group>
-  <!--    <div class="login-form__wrapper">-->
-  <!--        <div class="login-form">-->
-  <!--            <form [formGroup]="form" (ngSubmit)="login()">-->
-  <!--                <h2 class="login-form__title">Административная панель</h2>-->
-  <!--                <div class="login-form__error">-->
-  <!--                    <mat-error *ngIf="error">{{ error }}</mat-error>-->
-  <!--                </div>-->
-  <!--                <mat-form-field class="login-form__field" appearance="outline">-->
-  <!--                    <mat-label>Логин</mat-label>-->
-  <!--                    <input formControlName="login" matInput type="text" [errorStateMatcher]="matcher" />-->
-  <!--                    <mat-error *ngIf="form.get('login').hasError('required')">Обязательное поле</mat-error>-->
-  <!--                </mat-form-field>-->
-  <!--                <mat-form-field class="login-form__field" appearance="outline">-->
-  <!--                    <mat-label>Пароль</mat-label>-->
-  <!--                    <input formControlName="password" matInput [type]="hidePass ? 'password' : 'text'" />-->
-  <!--                    <button type="button" mat-icon-button matSuffix (click)="hidePass = !hidePass">-->
-  <!--                        <mat-icon>{{ hidePass ? 'visibility_off' : 'visibility' }}</mat-icon>-->
-  <!--                    </button>-->
-  <!--                    <mat-error *ngIf="form.get('password').hasError('required')">Обязательное поле</mat-error>-->
-  <!--                </mat-form-field>-->
-  <!--                <button type="submit" mat-raised-button class="login-form__submit" color="primary">ВОЙТИ</button>-->
-  <!--            </form>-->
-  <!--        </div>-->
-  <!--    </div>-->
-</div>
-
-<app-loading *ngIf="loading"></app-loading>
+<app-page>
+  <div class="admin-page">
+    <mat-tab-group>
+      <mat-tab label="Банки">
+        <app-table [data]="banks" [columns]=""></app-table>
+      </mat-tab>
+      <mat-tab label="Заявители">
+<!--        <table mat-table [dataSource]="banks" matSort class="admin-page__table">-->
+<!--          <ng-container matColumnDef="name">-->
+<!--            <th mat-header-cell *matHeaderCellDef mat-sort-header>Название</th>-->
+<!--            <td mat-cell *matCellDef="let element">{{ element.name }}</td>-->
+<!--          </ng-container>-->
+<!--          <ng-container matColumnDef="rate">-->
+<!--            <th mat-header-cell *matHeaderCellDef mat-sort-header>Процентная ставка</th>-->
+<!--            <td mat-cell *matCellDef="let element">{{ element.rate / 100 | percent }}</td>-->
+<!--          </ng-container>-->
+<!--          <tr mat-header-row *matHeaderRowDef="columns.banks"></tr>-->
+<!--          <tr mat-row *matRowDef="let row; columns: columns.banks"></tr>-->
+<!--        </table>-->
+      </mat-tab>
+      <mat-tab label="Предложения">
+<!--        <table mat-table [dataSource]="banks" matSort class="admin-page__table">-->
+<!--          <ng-container matColumnDef="name">-->
+<!--            <th mat-header-cell *matHeaderCellDef mat-sort-header>Название</th>-->
+<!--            <td mat-cell *matCellDef="let element">{{ element.name }}</td>-->
+<!--          </ng-container>-->
+<!--          <ng-container matColumnDef="rate">-->
+<!--            <th mat-header-cell *matHeaderCellDef mat-sort-header>Процентная ставка</th>-->
+<!--            <td mat-cell *matCellDef="let element">{{ element.rate / 100 | percent }}</td>-->
+<!--          </ng-container>-->
+<!--          <tr mat-header-row *matHeaderRowDef="columns.banks"></tr>-->
+<!--          <tr mat-row *matRowDef="let row; columns: columns.banks"></tr>-->
+<!--        </table>-->
+      </mat-tab>
+    </mat-tab-group>
+  </div>
+  <app-loading *ngIf="loading"></app-loading>
+</app-page>
