--- a/client/src/app/components/home-page/home-page.component.html
+++ b/client/src/app/components/home-page/home-page.component.html
@@ -1,28 +1,30 @@
-<div class="home-page">
-  <mat-tab-group #tabs dynamicHeight [animationDuration]="animationDuration">
-    <mat-tab>
-      <app-offer-form
-        (sendRequest)="openOffersList($event)"
-        (next)="slideToRequest()"
-        [showNext]="canSlideToRequest"
-      ></app-offer-form>
-    </mat-tab>
-    <mat-tab>
-      <app-request-form
-        *ngIf="offer"
-        (sendRequest)="sendRequest($event)"
-        (back)="slideToOffer()"
-        [offer]="offer"
-      ></app-request-form>
-    </mat-tab>
-    <mat-tab>
-      <div class="home-page__finish">
-        Поздравляем, {{ loanRequest?.person.firstName }}!<br /><br />
-        Вы успешно отправили заявку на оформление ипотеки.<br />
-        Скоро с вами свяжется сотрудник "{{ offer?.bank.name }}" для уточнения деталей.<br /><br />
-        Хорошего дня!
-      </div>
-    </mat-tab>
-  </mat-tab-group>
-  <app-loading *ngIf="loading"></app-loading>
-</div>
+<app-page>
+  <div class="home-page">
+    <mat-tab-group #tabs dynamicHeight animationDuration="600">
+      <mat-tab>
+        <app-offer-form
+          (sendRequest)="openOffersList($event)"
+          (next)="slideToRequest()"
+          [showNext]="canSlideToRequest"
+        ></app-offer-form>
+      </mat-tab>
+      <mat-tab>
+        <app-request-form
+          *ngIf="offer"
+          (sendRequest)="sendRequest($event)"
+          (back)="slideToOffer()"
+          [offer]="offer"
+        ></app-request-form>
+      </mat-tab>
+      <mat-tab>
+        <div class="home-page__finish">
+          Поздравляем, {{ loanRequest?.person.firstName }}!<br /><br />
+          Вы успешно отправили заявку на оформление ипотеки.<br />
+          Скоро с вами свяжется сотрудник "{{ offer?.bank.name }}" для уточнения деталей.<br /><br />
+          Хорошего дня!
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+    <app-loading *ngIf="loading"></app-loading>
+  </div>
+</app-page>
