--- a/client/src/app/components/shared/page/page.component.html
+++ b/client/src/app/components/shared/page/page.component.html
@@ -1,7 +1,7 @@
 <div class="page">
   <div class="page__content">
     <div class="page__content__logo">
-      <img class="page__content__logo-img" src="../../../../assets/logo.png " alt="logo"/>
+      <img class="page__content__logo-img" src="../../../../assets/logo.png " alt="logo" routerLink="/"/>
     </div>
     <ng-content></ng-content>
   </div>
