--- a/client/src/app/components/shared/table/table.component.html
+++ b/client/src/app/components/shared/table/table.component.html
@@ -1,5 +1,10 @@
-<table mat-table [dataSource]="dataSource" matSort class="table">
-  <mat-text-column *ngFor="let column of columns" [name]="column.name" [headerText]="column.header"></mat-text-column>
-  <tr mat-header-row *matHeaderRowDef="columnsNames"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnsNames"></tr>
-</table>
+<div class="table__container">
+  <table mat-table [dataSource]="dataSource" class="table">
+    <ng-container *ngFor="let column of columns" [matColumnDef]="column.name">
+      <th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
+      <td mat-cell *matCellDef="let element">{{ element[column.name]}}</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columnsNames"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnsNames"></tr>
+  </table>
+</div>
